--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -1,4 +1,6 @@
-%h1 Tea List
+%h1 My Cart
+%p= "Address: #{@cart.address}"
+%p= "Gift Box: #{@cart.gift_box}"
 %table{:border => 1}
   %tbody
     %tr
@@ -7,15 +9,11 @@
       %td Price
       %td Origin
       %td Size
-      %td Cart
-  - @teas.each do |tea|
+  - @cart.teas.each do |tea|
     %tr
       %td= link_to "#{tea.name}", my_tea_path(tea.id)
       %td= tea.stock
       %td= "#{tea.price} TL"
       %td= tea.origin
       %td= tea.size.capitalize
-      %td
-        %a{ :href => "/add_to_cart/#{tea.id}", :title => "Add To Cart!" } Add To Cart!
-
-= link_to "My Cart", my_cart_path(1)
+%p= "Total Cost: #{@total_cost.round(2)}"
